metrique/tests/ui/fail/bad_metrics_value.stderr
error: Only structs are supported with value, use value(string) with enums
 --> tests/ui/fail/bad_metrics_value.rs:4:1
  |
4 | / enum Foo {
5 | | }
  | |_^

error: Only structs are supported with value, use value(string) with enums
  --> tests/ui/fail/bad_metrics_value.rs:8:1
   |
8  | / enum EnumWithNakedValue {
9  | |     Foo
10 | | }
   | |_^

error: Only enums are supported with value(string)
  --> tests/ui/fail/bad_metrics_value.rs:13:1
   |
13 | / struct Bar {
14 | | }
   | |_^

error: multiple non-ignored fields for #[metrics(value)]
  --> tests/ui/fail/bad_metrics_value.rs:19:5
   |
19 |     y: u32,
   |     ^

error: `name` does not make sense with #[metrics(value)]
  --> tests/ui/fail/bad_metrics_value.rs:38:5
   |
38 |     u32,
   |     ^^^

error: Unknown field: `p`
  --> tests/ui/fail/bad_metrics_value.rs:43:15
   |
43 |     #[metrics(p = q)]
   |               ^

error: prefix is not supported for #[metrics(value)]
  --> tests/ui/fail/bad_metrics_value.rs:48:8
   |
48 | struct Baz6 {
   |        ^^^^

error: prefix is not supported for #[metrics(value)]
  --> tests/ui/fail/bad_metrics_value.rs:53:8
   |
53 | struct Baz7 {
   |        ^^^^

error: Only named fields are supported
  --> tests/ui/fail/bad_metrics_value.rs:58:1
   |
58 | struct Unit; /* not supported right now */
   | ^^^^^^^^^^^^

error: Unknown field: `p`. Available values: `name`
  --> tests/ui/fail/bad_metrics_value.rs:62:15
   |
62 |     #[metrics(p="q")]
   |               ^

error: Cannot combine `value` with `subfield`
  --> tests/ui/fail/bad_metrics_value.rs:66:26
   |
66 | #[metrics(value(string), subfield)]
   |                          ^^^^^^^^

error: value does not make sense with dimension-sets
  --> tests/ui/fail/bad_metrics_value.rs:71:1
   |
71 | #[metrics(value(string), emf::dimension_sets = [["X"]])]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `metrics` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `Second` in this scope
  --> tests/ui/fail/bad_metrics_value.rs:24:22
   |
24 |     #[metrics(unit = Second)]
   |                      ^^^^^^
  --> $RUST/core/src/marker.rs
   |
   = note: similarly named trait `Send` defined here
   |
help: a trait with a similar name exists
   |
24 -     #[metrics(unit = Second)]
24 +     #[metrics(unit = Send)]
   |
help: consider importing one of these structs
   |
1  + use metrique::writer::unit::Second;
   |
1  + use metrique_writer::unit::Second;
   |
1  + use metrique_writer_core::unit::Second;
   |

error[E0277]: `std::string::String` cannot be used as a sample group
  --> tests/ui/fail/bad_metrics_value.rs:81:1
   |
81 | #[metrics]
   | ^^^^^^^^^^ the trait `SampleGroup` is not implemented for `std::string::String`
82 | struct WithStringSampleGroup {
83 |     #[metrics(sample_group)]
   |               ------------ required by a bound introduced by this call
   |
   = note: sample groups must implement `SampleGroup`
   = note: consider using `&'static str` instead of `String`, or make a new type that implements `SampleGroup`
   = help: the trait `SampleGroup` is implemented for `&str`

error[E0277]: `FormattedValue<'_, u32, Foo, _>` is not a metric value
  --> tests/ui/fail/bad_metrics_value.rs:31:5
   |
31 |     x: u32,
   |     ^ the trait `Value` is not implemented for `FormattedValue<'_, u32, Foo, _>`
   |
   = note: If `FormattedValue<'_, u32, Foo, _>` is a metric *entry*, flatten it using `#[metrics(flatten)]`
   = help: the following other types implement trait `Value`:
             &T
             Arc<T>
             Baz2Value
             Baz3Value
             Box<T>
             Cow<'_, T>
             Duration
             ForceFlag<T, FLAGS>
           and $N others

error[E0277]: CloseValue is not implemented for &std::string::String
  --> tests/ui/fail/bad_metrics_value.rs:78:5
   |
78 |     field: String,
   |     ^^^^^ This type must implement `CloseValue`
   |
   = help: the trait `CloseValue` is not implemented for `&std::string::String`
   = note: You may need to add `#[metrics]` to `&std::string::String` or implement `CloseValue` directly.
   = note: if &std::string::String implements `Value` but not `CloseValue`, add `#[metrics(no_close)]`
   = note: If this type is `&T`, is closed inside a flattened entry, and `T` implements `CloseValue`, consider using `#[metrics(subfield_owned)]`.
help: consider dereferencing here
   |
78 |     *field: String,
   |     +
